app/globals.css
:root {
  --max-width: 1100px;
  --border-radius: 12px;
  --font-manrope: var(--font-manrope), ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
  --foreground-rgb: 250, 250, 250;
  --background-start-rgb: 0, 0, 10;
  --background-end-rgb: 0, 0, 37;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 250, 250, 250;
    --background-start-rgb: 0, 0, 10;
    --background-end-rgb: 0, 0, 37;
  }
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
}

/* Mobile (if wanting no background) */
/**
@media (max-width: 700px) {
  body {
    background: #0a0a18;
  }
}
*/

a {
  color: #25a4d7;
  text-decoration: none;
  cursor: pointer;
}

a:hover {
  color: #277cbd;
}

html {
  color-scheme: dark;
}

/* Add these new styles */
h1, h2, h3, h4, h5, h6 {
  font-family: var(--font-orbitron);
}

code, pre {
  font-family: var(--font-mono);
}

/* Special fix for the lifi widget chain selector on mobile */
.full-page-container > div {
  top: 106px;
}

